// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<DocumentFragment>
  <header
    style="background-color: rgba(0, 0, 0, 0.4); color: rgb(255, 106, 149);"
  >
    <div
      class="container"
    >
      <h2>
        Feedback UI
      </h2>
    </div>
  </header>
</DocumentFragment>
`;

exports[`should test Header component 1`] = `
<header
  style={
    Object {
      "backgroundColor": "rgba(0,0,0,0.4)",
      "color": "#ff6a95",
    }
  }
>
  <div
    className="container"
  >
    <h2>
      Feedback UI
    </h2>
  </div>
</header>
`;
